<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_download"
        android:icon="@drawable/ic_file_download_black_24dp"
        android:title="@string/download" />
    <item
        android:id="@+id/navigation_Profile"
        android:icon="@drawable/ic_people_black_24dp"
        android:title="@string/title_profile" />
    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black"
        android:title="@string/title_home" />
    <item
        android:id="@+id/navigation_setting"
        android:icon="@drawable/ic_settings_black_24dp"
        android:title="@string/title_setting" />
    <item
        android:id="@+id/navigation_about_me"
        android:icon="@drawable/ic_info_outline_black_24dp"
        android:title="@string/about_me" />

</menu>
