<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_activity"
        android:textSize="32sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/date"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="160dp"
        android:layout_height="wrap_content"
        android:text="@string/your_step_count"
        android:textSize="18sp" />

    <LinearLayout
        android:id="@+id/step_view"
        android:layout_width="match_parent"
        android:layout_height="185dp"
        android:orientation="horizontal">

    </LinearLayout>

    <TextView
        android:id="@+id/textView8"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/week_avg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@string/avg_this_week_1234_steps"
        android:textAlignment="viewStart"
        android:textColor="@color/colorStepAvg"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/month_avg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@string/avg_this_month_1234_steps"
        android:textAlignment="viewStart"
        android:textColor="@color/colorStepAvg"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/year_avg"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:paddingStart="@dimen/activity_horizontal_margin"
        android:text="@string/avg_this_year_1234_steps"
        android:textAlignment="viewStart"
        android:textColor="@color/colorStepAvg"
        android:textSize="18sp" />

    <Button
        android:id="@+id/show_all_data"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/show_all_data"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

    <Button
        android:id="@+id/path_today"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:text="@string/your_path_today"
        android:textAlignment="viewStart"
        android:textSize="18sp" />

</LinearLayout>
