<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBlack">

    <Button
        android:id="@+id/previous_day"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="10dp"
        android:layout_height="185dp"
        android:layout_weight="1"
        android:text="@string/previous_day"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/step_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:fontFamily="cursive"
        android:text="@string/steps_count"
        android:textAlignment="center"
        android:textColor="@color/colorStepCount"
        android:textSize="50sp" />

    <Button
        android:id="@+id/next_day"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="10dp"
        android:layout_height="185dp"
        android:layout_weight="1"
        android:text="@string/next_day"
        android:textColor="@color/colorPrimary"
        android:textSize="30sp" />
</LinearLayout>
