<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/record_date"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:text="@string/_10_10_2018"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/record_steps"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignStart="@+id/record_date"
        android:layout_alignTop="@+id/record_date"
        android:layout_marginStart="140dp"
        android:text="@string/steps_1234"
        android:textAlignment="center"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/button"
        android:layout_width="30dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentTop="true"
        android:layout_marginEnd="50dp"
        android:layout_marginTop="20dp"
        android:text="@string/next_day"
        android:textSize="20sp"
        android:textStyle="bold" />
</RelativeLayout>
